    a torrent file expects and print the appropriate download path (run "upsies
    dloc -h" for more information)
  * Added detection of Dolby Vision in release name and video file
  * bB: Added support for "Dolby Vision" tag
  * bB: Retry login up to 30 times instead of 15 when encountering login bug and
    cap the delay between login attempts at 5 seconds.
  * Fixed "I/O error" when creating screenshots on Windows


2021.07.13
  * BHD: Disable most edition values except for "Uncut" and "Unrated" to avoid
    the error: "Invalid edition value: Field must be a valid edition value."


2021.07.09
  * Fixed all "/" being removed from mediainfo output when given a path without
    parent directory
  * bB: Fixed submission of Dolby Atmos content
  * Fix crash when stdin is closed


2021.07.06
  * Added support for ptpimg.me (run "upsies set --fetch-ptpimg-apikey EMAIL
    PASSWORD" or "upsies set imghosts.ptpimg.apikey APIKEY")
  * bB: Added --anime option
  * Speedier detection of first video file in season packs
  * Fixed "Error 1064" when scene searching for unescaped "@" in group name


2021.06.22
  * BHD: Fix autodetection of "Commentary" and "DualAudio" tags
  * BHD: Fix "Too much data for declared Content-Length" when submitting
    non-ASCII characters in mediainfo


2021.06.20.1
  * Fix "No such file or directory" when ~/.config/upsies doesn't exist


2021.06.20
  * Add support for BHD
  * bB: Add support for "Theatrical Cut" and "IMAX"
  * ReleaseInfo: Add support for "OAR" and "Open Matte"


2021.06.05
  * Switched to date-based version schema
  * Fixed getting IMDb info
  * screenshots: Added --output-directory/-o argument which defaults to the
    current working directory
  * scene-search: Report HTTP request error properly
  * scene-check: Ask user in case of HTTP request error
  * release-name: Go back to accepting anything, even with incomplete
    information
  * bB: Added --screenshots CLI argument and trackers.bb.screenshots config