@@ -6,6 +6,7 @@
   * bB: Added support for "Dolby Vision" tag
   * bB: Retry login up to 30 times instead of 15 when encountering login bug and
     cap the delay between login attempts at 5 seconds.
+  * bB: Short option for --screenshots changed to --ss
   * Fixed "I/O error" when creating screenshots on Windows
 
 
